Fix layout issues in IE9

--- a/index.css
+++ b/index.css
@@ -433,7 +433,7 @@ body,
     flex: 1 1 25%;
     border-right: 10px solid #000;
     position: relative;
-    width: 25%;
+    width: 24.99999%;
     float: left;
 }
 
